tests/invalid/Lifetime_Lambda_Invalid_1.whiley
// wrong method type

public export method test():
    method<a>(&a:int, &a:int)->(&a:int) m = &<a>(&a:int x, &int y -> a:new 1)
